# python-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  linting.sh  pylintrc  pyproject.toml  pytest.ini  test.Dockerfile
.github/workflows/: git_ci.yml
docs/source/: conf.py  index.rst
docs/source/_static/css/: theme.css
docs/source/api/: api_doc.rst  generate_api_doc.ipynb  index.rst  openapi.yaml
docs/source/reference/: example.rst  index.rst
docs/source/usage/: doc_example.ipynb  index.rst
python_template/: config.py  example.py  main.py
python_template/api/endpoints_test/: main.py
python_template/api/health/: __init__.py  main.py
python_template/example/: example.py
python_template/storage/: mongodb.py  s3.py  utils.py
tests/: test_main.py
tests/api/: test_api.py
tests/integration/: test_integration.py
