[tool.poetry]
name = "python_template"
version = "0.1.0"
description = ""
authors = ["ldom <louis@giron-dom.eu>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
packages = [{include = "python_template"}]

[[tool.poetry.source]]
name = "pypi_"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
black = "^23.10.1"
pre-commit = "^3.5.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-design = "^0.5.0"
sphinx-rtd-theme = "^1.3.0"
autodocsumm = "^0.2.11"
ipython = "^8.17.2"
matplotlib = "^3.8.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
httpx = "^0.25.1"

[tool.poetry.group.deploy.dependencies]
wheel = "^0.41.3"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
